# invisible-backdoor-detector

./: LICENSE  README.md  invisible-backdoor-detector.py  pyproject.toml  requirements.txt  unicode-bidi-detector.py
example/: package.json
example/src/: index.js
examples/nodejs/src/: index.js
invisible_backdoor_detector/: helper.py  main.py
